--- a/pom.xml
+++ b/pom.xml
@@ -9,4 +9,15 @@
     <version>1.0-SNAPSHOT</version>
 
 
+    <dependencies>
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-java</artifactId>
+            <version>3.11.0</version>
+        </dependency>
+
+
+    </dependencies>
+
+
 </project>
